[project]
name = "bug-triage-openenv"
version = "1.0.0"
description = "Real-world GitHub issue triage environment for AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.8.2",
    "openai==1.40.0",
    "pyyaml==6.0.2",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "openenv>=0.1.0",
    "pytest>=8.0.0",
    "aiofiles==23.2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]